--- a/classes/Postita.html
+++ b/classes/Postita.html
@@ -89,7 +89,7 @@
 
 <div class="box intro">
     <p><a href="http://Postita.fi">Postita.fi</a> class for utilize their API.
-Test that you can login to <a href="http://postita.fi">postita.fi</a> web interface with the same credentials and reset the password if needed. Check the code examples and contact our support (info@postita.fi) if problem persists.</p>
+Test that you can login to <a href="http://postita.fi">postita.fi</a> web interface with the same credentials and reset the password if needed.</p>
 
 </div>
 
