--- a/files/lib_postita.js.html
+++ b/files/lib_postita.js.html
@@ -94,7 +94,7 @@ exports.version = require(&#x27;../package&#x27;).version;
 
 /**
 * Postita.fi class for utilize their API.
-* Test that you can login to postita.fi web interface with the same credentials and reset the password if needed. Check the code examples and contact our support (info@postita.fi) if problem persists.
+* Test that you can login to postita.fi web interface with the same credentials and reset the password if needed.
 *
 * @class Postita
 * @constructor
